--- a/do_square.html
+++ b/do_square.html
@@ -52,7 +52,7 @@
 <body>
     <input name="myfile" type="file" accept=".jpg" onchange="fileup(this)" class="file-button"/>
     <a href="#" class="btn" id="button">Do square</a><br>
-    赤色以外をグレースケール化します
+    画像の長編に黒帯をつけて正方形化します  
     ※ファイルを選択して画像が表示されてから”Do square"を一回押してください、ボタンの色が元に戻ると処理された画像が表示されます、保存してお使いください。元の写真には影響ありません。<br>
     何かエラーが出たらブラウザを更新してください。<br>
     スマホの場合に起こる現象(10/2時点)<br>
