--- a/do_square.html
+++ b/do_square.html
@@ -43,6 +43,17 @@
             color: black;
             border-radius: 7px;
         }
+        .dlink {
+            width: 2000px;
+            height: 100px;
+            font-size: 35px;
+            text-align: center;
+            padding: 20px 30px;
+            background-color: PaleTurquoise;
+            text-decoration: none;
+            color: black;
+            border-radius: 7px;
+        }
         .btn.btn:active{
             background: rgb(172, 172, 172);
         }
@@ -51,13 +62,15 @@
 
 <body>
     <input name="myfile" type="file" accept=".jpg" onchange="fileup(this)" class="file-button"/>
-    <a href="#" class="btn" id="button">Do square</a><br>
+    <a href="#" class="btn" id="button">Do square</a>
+    <a href="dummy" download class="dlink" id="dlbtn" style="display:none">画像を保存</a><br>
     画像の長編に黒帯をつけて正方形化します  
-    ※ファイルを選択して画像が表示されてから”Do square"を一回押してください、ボタンの色が元に戻ると処理された画像が表示されます、保存してお使いください。元の写真には影響ありません。<br>
+    ※ファイルを選択して画像が表示されてから”Do square"を一回押してください、
+    ボタンの色が元に戻り、保存ボタンが表示されると処理された画像が表示されます、
+    ボタンを押し保存してお使いください。元の写真には影響ありません。<br>
     何かエラーが出たらブラウザを更新してください。<br>
     スマホの場合に起こる現象(10/2時点)<br>
     ・画像サイズが縮小されます<br>
-    ・元画像のサイズが大きいとメニューに保存が表示されません、共有からSNSにそのままアップロードは可能のようです。<br>
     <hr>
     <div>
         <img id="img"/>
@@ -76,16 +89,25 @@
         from pyscript import when, display
         from pyscript.web import img, page
 
+        b64_header = 'data:image/jpeg;base64,'
         @when("click", "#button")
         def click_handler(event):
+            dl = page['a']
             my_input=page["img"]
-            img_binary = base64.b64decode(my_input[0].src[23:])
-            img_b64 = rog_print(img_binary)
-            my_input[0].src='data:image/jpeg;base64,' + img_b64
+            fb = page["input"]
+            img_binary = base64.b64decode(my_input[0].src[len(b64_header):])
+            img_b64 = sqr_print(img_binary)
+            my_input[0].src = b64_header + img_b64
+            in_name = fb.value[0]
+            name_arr = in_name.split('\\')
+            out_name = name_arr[-1].replace('.','_ExifOn.')
+            dl[1].download = out_name
+            dl[1].href = b64_header + img_b64
+            dl[1].style = "display:inline"
 
         color = (0,0,0)
         
-        def rog_print(path):
+        def sqr_print(path):
             jpg = np.frombuffer(path,dtype=np.uint8)
             color_img = cv.imdecode(jpg, cv.IMREAD_COLOR)
 
@@ -112,9 +134,11 @@
     <script>
         const fileup = (e) => {
             const img = document.getElementById('img');
+            const dlb = document.getElementById('dlbtn');
             const reader = new FileReader();
             reader.onloadend = () => {
                 img.src = reader.result;
+                dlb.style = "display:none";
             }
             reader.readAsDataURL(e.files[0]);
         }
