--- a/do_square.html
+++ b/do_square.html
@@ -100,7 +100,7 @@
             my_input[0].src = b64_header + img_b64
             in_name = fb.value[0]
             name_arr = in_name.split('\\')
-            out_name = name_arr[-1].replace('.','_ExifOn.')
+            out_name = name_arr[-1].replace('.','_sqr.')
             dl[1].download = out_name
             dl[1].href = b64_header + img_b64
             dl[1].style = "display:inline"
